added bombs, winning, losing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/addons/p5.dom.min.js"></script>
     <script src="space.js"></script>
     <div id="canvasHere"></div>
-    <div id="placeEnemy"></div>
+    <div id="reset"></div>
   </body>
 </html>
